Fix broken layout of pattern thumbs and grid instructions on coat page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -420,7 +420,6 @@ table td span {
 
 
 #dimensionbodylength, #dimensionbodycircumference, #dimensionsleevecircumference, #fabricrequired {
-    /* padding: 0 8px 0 12px; */
     font-size: 16px;
     font-weight: 400;
     color: #d46300;
@@ -468,8 +467,6 @@ input {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin: 0 auto 12px;
-    max-width: 95vw;
 }
 
 .fabricsize {
@@ -494,20 +491,6 @@ input {
     padding: none;
     transition: ease-in-out 50ms;
 }
-
-
-/* .downloadwrapper {
-    padding: 0;
-    display: grid;
-    grid-gap: 24px;
-    grid-template-columns: 45% 45%;
-    grid-template-rows: auto;
-    justify-content: space-between;
-    align-content: flex-start;
-    max-height: 578px;
-    width: 100%;
-    margin: 22px auto 140px auto;
-} */
 
 .pattern-thumb {
     width: 100%;
@@ -673,36 +656,31 @@ h5 {
         margin: 0 auto;
     }
 
-    /* .downloadwrapper {
-        padding: 0;
-        display: grid;
-        grid-gap: 24px;
-        grid-template-columns: 45% 45%;
-        grid-template-rows: auto;
-        justify-content: space-between;
-        align-content: flex-start;
-        max-height: 578px;
-        width: 100%;
-        margin: 22px auto 140px auto;
-    } */
+    #grid-intro {
+        display: inline-flex;
+        flex-direction: column;
+        height: fit-content;
+        margin-bottom: 10px;
+    }
 
     .downloadwrapper {
         padding: 0;
-        display: grid;
-        grid-gap: 20px;
-        grid-template-columns: 110px 110px;
-        grid-template-rows: 110px 110px 110px 110px 110px;
-        justify-content: right;
-        align-content: flex-start;
-        max-height: 578px;
+        margin: 10px 0 0 0;
+        display: inline-flex;
+        flex-direction: column;
+        flex-wrap:wrap;
+        /* grid-template-columns: auto;
+        grid-template-rows: auto; */
+        justify-content: space-between;
+        align-content: space-between;
+        align-items: flex-start;
+        height: 200px;
+        max-height: 240px;
         width: 100%;
-        margin: 22px 24px auto auto;
     }
 
     .pattern-thumb {
-        width: 100%;
-        justify-content: right;
-        max-height: 110px;
+        width: 98px;
         padding: 0;
     }
 
@@ -710,14 +688,14 @@ h5 {
         background-color: #b7b3a7;
     }
     
-    .overlay-grid-tshirt,
+    /* .overlay-grid-tshirt,
     .neckline-over,
     .body-over,
     .sleeve-left-over,
     .sleeve-right-over {
         grid-column: 1 / 3;
         grid-row: 3 / 5;
-    }
+    } */
 
     .garment-tile:hover {
         filter: opacity(88%);
